--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="list-block media-list inset" style="margin-top: 12px">
 <ul>
 <li>
-<a href="app/install/mob.html" class="external item-link item-content redirect">
+<a href="app/install/id1.html" class="external item-link item-content redirect">
 <div class="item-media"><img class="i-apps" src="app/img/id1.jpg" width="44"></div>
 <div class="item-inner">
 <div class="item-title-row">
@@ -46,7 +46,7 @@
 </a>
 </li>
 <li>
-<a href="app/install/pokego2.html" class="external item-link item-content redirect">
+<a href="app/install/id2.html" class="external item-link item-content redirect">
 <div class="item-media"><img class="i-apps" src="app/img/id2.jpg" width="44"></div>
 <div class="item-inner">
 <div class="item-title-row">
@@ -57,7 +57,7 @@
 </a>
 </li>
 <li>
-<a href="app/install/poke.html" class="external item-link item-content redirect">
+<a href="app/install/id3.html" class="external item-link item-content redirect">
 <div class="item-media"><img class="i-apps" src="app/img/id3.jpg" width="44"></div>
 <div class="item-inner">
 <div class="item-title-row">
