--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="app/css/framework7-icons.css" rel="stylesheet">
 <link href="app/css/main.css" rel="stylesheet">
 </head>
-<body class="layout-white theme-red">
+<body class="layout-black theme-red">
 <div class="statusbar-overlay"></div>
 <div class="panel-overlay"></div>
 <div class="panel panel-left panel-cover layout-dark">
