--- a/app/install/two.html
+++ b/app/install/two.html
@@ -68,59 +68,57 @@
 <div class="item-inner">
 <center>
 <p style="word-break: keep-all;color:#8e8e93;">
--This War Of Mine<br>
--Pinnacle Studio<br>
--Hitman Sniper<br>
--VHS Camcorder<br>
--Riddick<br>
--Instaboard<br>
--Home Design 3D<br>
--Game Studio Tycoon 3<br>
--My unturned<br>
--Super Slowmo Show<br>
--Red Comrades 2<br>
--EvoLand<br>
--Godfire<br>
--hello, stranger<br>
--Bazaart Foto<br>
--Final Fantasy IX<br>
--Motorsport Manager<br>
--Card Crawler<br>
--Soccer Physics<br>
--Til Mornings<br>
--Lara Croft GO<br>
--XCOM Go<br>
--Bastion<br>
--LEGO Harry Potter<br>
--LEGO The Lord<br>
--WWE 2k<br>
--Tiny Gardens<br>
--Broken Age<br>
--Trick Shot<br>
--Blek<br>
--Door Kickers<br>
--Baldurs Gate<br>
--Ravensword<br>
--Prune<br>
--Roller Coaster Tycoon<br>
--Robbery Bob 2<br>
--Power Ping Pong<br>
--Dead Synchronic<br>
--HardBoiled<br>
--The Image Converter<br>
--Braveland Pirates<br>
--XenoWerk<br>
--Scribblenauts<br>
--TruckSimulation<br>
--Warhammer<br>
--You Doodle PRO<br>
--You Must Build<br>
--Ghosts Of Memory<br>
--Sanitarium<br>
--The Bards Tale<br>
--Dim Light<br>
--Electronic Mate<br>
--Aralon : Forge<br>
+-Superimpose<br>
+-Photon<br>
+-Vidih<br>
+-Monument 2<br>
+-Fontmania<br>
+-Terreria<br>
+-Worms 4<br>
+-whiteday<br>
+-Monument<br>
+-Leo's Fortune<br>
+-AC: Identity<br>
+-IntroMate<br>
+-Movie Drops<br>
+-ShadowGun<br>
+-Earn To Die<br>
+-Tintin<br>
+-FNAF 4<br>
+-FNAF<br>
+-Real Steal<br>
+-Geometry<br>
+-Puffin<br>
+-FIFA Mobile<br>
+-YL Gaming<br>
+-YL Music<br>
+-YL Cooking<br>
+-Consim 2<br>
+-The House Of da Vinci<br>
+-COD Zombies<br>
+-Vector<br>
+-Evolution Of Soccer<br>
+-Deus Ex: The Fall<br>
+-AmazingSpiderMan<br>
+-LIMBO<br>
+-Max Payne<br>
+-Truck 16<br>
+-Bau-Simulator 2014<br>
+-Take Off<br>
+-Piconic<br>
+-Traffic Tour<br>
+-MCVS<br>
+-ModernCombat 5<br>
+-Sniper<br>
+-HitMan GO<br>
+-COD:BOZ<br>
+-FS 18<br>
+-Trucker PRO 17<br>
+-Minecraft<br>
+-Bully<br>
+-GTA Vice City<br>
+-GTA: SA<br>
+-GTA III<br>
 <b>Apps :</b> 50+
 </p>
 </center>
