--- a/app/install/three.html
+++ b/app/install/three.html
@@ -69,47 +69,57 @@
 <center>
 </p></b>
 <p style="word-break: keep-all;color:#8e8e93;">
--Geometry Dash<br>
--Heroes Of Loot<br>
--LIMBO<br>
--The Greedy Cave<br>
--Machinarium<br>
--Don't Starve<br>
--Dragons Dungeon<br>
--Cards Dungeon<br>
--Heart Maze<br>
--Teen Titans Go!<br>
--Severed<br>
--Shadow Blade<br>
--Hot Trigger <br>
--Plug For Minecraft<br>
--The Lions Song<br>
--Mushroom 11<br>
--Peace, Death!<br>
--Death Coming<br>
--Tiki Taka World<br>
--Water Balance<br>
--Stellar Wanderer<br>
--Rayman Classic<br>
--Epic Of Kings<br>
--PRETATORS<br>
--Hotel Silence<br>
--Bookster<br>
--72 hours<br>
--OddWorld<br>
--Infinite Skater<br>
--WolfRamAlpha<br>
--Gangster Granny<br>
--Oceanhorn<br>
--Dark Origin<br>
--The WestPot<br>
--Dungelot<br>
--Exploding Kittens<br>
--Lifeline : Crisis<br>
--The Bonfire<br>
--Griblers<br>
--Rusty Lake <br>
--RichtSpeer<br>
+-R-Play
+-911 Operator<br>
+-Odyssey<br>
+-Bring You Home<br>
+-PAKO 2<br>
+-Neon Drive<br>
+-Old Sins<br>
+-Animus<br>
+-Dragon Hills 2<br>
+-LetThemCome<br>
+-PeaceDeath<br>
+-The House of da Vinci<br>
+-BC Portal<br>
+-New 'n' Tasty<br>
+-Afterlight<br>
+-Commandos<br>
+-Morphite<br>
+-The Wittness<br>
+-NBA 2K18<br>
+-Death Point<br>
+-Shadow Fight 2<br>
+-Iron Marines<br>
+-Radiation City<br>
+-OmniFocus<br>
+-sf4cewd<br>
+-Framed 2<br>
+-FS 18<br>
+-Monument 2<br>
+-Goat Payday<br>
+-Subdivision<br>
+-Beholder<br>
+-Old Man<br>
+-To The Moon<br>
+-SG Races<br>
+-Pengy<br>
+-The Bunker<br>
+-Die With Glory<br>
+-Tempest<br>
+-ConSim 2<br>
+-Botanicula<br>
+-Kingdom<br>
+-PAN-PAN<br>
+-Binding of Isaac<br>
+-After The End<br>
+-The Escapists<br>
+-iMovie<br>
+-GarageBand<br>
+-PokerStarsNJ<br>
+-NBA LIVE<br>
+-VirtuaTennis<br>
+-Sonic CD<br>
 <br />
 <b>Apps :</b> 40+
 </p>
