--- a/app/install/two.html
+++ b/app/install/two.html
@@ -68,57 +68,45 @@
 <div class="item-inner">
 <center>
 <p style="word-break: keep-all;color:#8e8e93;">
--Superimpose<br>
--Photon<br>
--Vidih<br>
--Monument 2<br>
--Fontmania<br>
--Terreria<br>
--Worms 4<br>
--whiteday<br>
--Monument<br>
--Leo's Fortune<br>
--AC: Identity<br>
--IntroMate<br>
--Movie Drops<br>
--ShadowGun<br>
--Earn To Die<br>
--Tintin<br>
--FNAF 4<br>
--FNAF<br>
--Real Steal<br>
--Geometry<br>
--Puffin<br>
--FIFA Mobile<br>
--YL Gaming<br>
--YL Music<br>
--YL Cooking<br>
--Consim 2<br>
--The House Of da Vinci<br>
--COD Zombies<br>
--Vector<br>
--Evolution Of Soccer<br>
--Deus Ex: The Fall<br>
--AmazingSpiderMan<br>
--LIMBO<br>
--Max Payne<br>
--Truck 16<br>
--Bau-Simulator 2014<br>
--Take Off<br>
--Piconic<br>
--Traffic Tour<br>
--MCVS<br>
--ModernCombat 5<br>
--Sniper<br>
--HitMan GO<br>
--COD:BOZ<br>
--FS 18<br>
--Trucker PRO 17<br>
--Minecraft<br>
--Bully<br>
--GTA Vice City<br>
--GTA: SA<br>
--GTA III<br>
+-Blink.tv
+-Card Wars
+-Bau-simulator 2014
+-Angry Birds Star Wars
+-FNAF 2
+-Hitman GO
+-Goat Simulator
+-Terraria
+-FIFA 15: UT
+-Plague inc.
+-InfinityBlade3
+-InfinityBlade 2
+-Carmageddon
+-Minecraft
+-KOTOR
+-Toca Builders
+-World of Goo
+-Infinity Blade
+-Ski Safari
+-LEGO LOTR
+-Squats
+-TDKR
+-Bike Baron
+-FIFA 14 (ios 9)
+-GTA Vice City
+-Sprinkle
+-Tintin
+-Ice Rage
+-AmazingSpiderMan
+-nova3
+-Asphalt7
+-Batman
+-Cut The Rope Vikings
+-Rayman Run
+-Cut The Rope
+-Scribblenauts
+-Munch Time
+-Go! Drum Set
+-Fruitninja!
 <b>Apps :</b> 50+
 </p>
 </center>
