--- a/app/install/two.html
+++ b/app/install/two.html
@@ -68,45 +68,45 @@
 <div class="item-inner">
 <center>
 <p style="word-break: keep-all;color:#8e8e93;">
--Blink.tv
--Card Wars
--Bau-simulator 2014
--Angry Birds Star Wars
--FNAF 2
--Hitman GO
--Goat Simulator
--Terraria
--FIFA 15: UT
--Plague inc.
--InfinityBlade3
--InfinityBlade 2
--Carmageddon
--Minecraft
--KOTOR
--Toca Builders
--World of Goo
--Infinity Blade
--Ski Safari
--LEGO LOTR
--Squats
--TDKR
--Bike Baron
--FIFA 14 (ios 9)
--GTA Vice City
--Sprinkle
--Tintin
--Ice Rage
--AmazingSpiderMan
--nova3
--Asphalt7
--Batman
--Cut The Rope Vikings
--Rayman Run
--Cut The Rope
--Scribblenauts
--Munch Time
--Go! Drum Set
--Fruitninja!
+-Blink.tv<br>
+-Card Wars<br>
+-Bau-simulator 2014<br>
+-Angry Birds Star Wars<br>
+-FNAF 2<br>
+-Hitman GO<br>
+-Goat Simulator<br>
+-Terraria<br>
+-FIFA 15: UT<br>
+-Plague inc.<br>
+-InfinityBlade3<br>
+-InfinityBlade 2<br>
+-Carmageddon<br>
+-Minecraft<br>
+-KOTOR<br>
+-Toca Builders<br>
+-World of Goo<br>
+-Infinity Blade<br>
+-Ski Safari<br>
+-LEGO LOTR<br>
+-Squats<br>
+-TDRK<br>
+-Bike Baron<br>
+-FIFA 14 (ios 9)<br>
+-GTA Vice City<br>
+-Sprinkle<br>
+-Tintin<br>
+-Ice Rage<br>
+-AmazingSpiderMan<br>
+-nova3<br>
+-Asphalt7<br>
+-Batman<br>
+-Cut The Rope Vikings<br>
+-Rayman Run<br>
+-Cut The Rope<br>
+-Scribblenauts<br>
+-Munch Time<br>
+-Go! Drum Set<br>
+-Fruitninja!<br>
 <b>Apps :</b> 50+
 </p>
 </center>
