--- a/app/install/one.html
+++ b/app/install/one.html
@@ -71,121 +71,100 @@
 <div class="item-inner">
 <center>
 <p style="word-break: keep-all;color:#8e8e93;">
--Gta LCS<br>
--Terraria<br>
--Lets Create Pottery<br>
--Radiation Island<br>
--The Room Three<br>
--SuperBrothers<br>
--GarageBand<br>
--Glitche<br>
--Banner Saga<br>
--Goat Simulator<br>
--AfterLight<br>
--FNAF 4<br>
--Minecraft : Story Mode<br>
--KAMI<br>
--Kiwanuka<br>
--Procreate - Sketch<br>
--Farming Simulator<br>
--Monument Valley<br>
--Lego Ninjago<br>
--Please Dont Touch The Button<br>
--Devil May Cry 4<br>
--Tallowmere<br>
--ShadowMatic<br>
--PixelMator<br>
--Angry Birds Star wars<br>
--Ski Safari : Adventure<br>
--BADLAND 2<br>
--Lost Horizon<br>
--Implosion<br>
--Octodad<br>
--Brothers : A Tale<br>
--COD Strike Team<br>
--Durak<br>
--Eufloria HD<br>
--TweetBot 4<br>
--PewDiePie : Legend<br>
--Backflip Madness<br>
--Pako : Car Chase<br>
--Worms 4<br>
--Guitar Pro<br>
--I Am Bread<br>
--Goat Simulator Vikings<br>
--Block Story<br>
--Imovie<br>
--Cross Progress<br>
--Cytus<br>
--Cut The Rope 2<br>
--Plague inc.<br>
--Construction Simulator<br>
--Super Hexagon<br>
--EHT 2013<br>
--The Room<br>
--Lifeline Silence<br>
--Patrick Kanes<br>
--Zodiac : Orcanon<br>
--OddWorld : Munch<br>
--Duet Game<br>
--Lumino City<br>
--Battle Supremac<br>
--The martians : Game<br>
--Borderlands Legend<br>
--Devious Dungeon<br>
--Total War Battle<br>
--Anomoly WarZone<br>
--Fieldrunners<br>
--Duke Nukem<br>
--Neuroshima Hexagon<br>
--Tempel Run : Brave<br>
--Castle DoomBad<br>
--Numberama 2<br>
--Bike Race Pro<br>
--Beat The Boss 2<br>
--Tiny Wings<br>
--Tales From The Deap<br>
--IceBreaker : A V<br>
--Layer : Simple<br>
--Stata<br>
--Lines The Game<br> 
--VideoShop<br>
--Space Age<br>
--Sorcery 3<br>
--LOG<br>
--To-Fu Fury<br>
--Out There<br> 
--Horizon Chase<br>
--The Executive<br>
--BuriedTown : Wolf<br>
--Doodle Devil<br>
--Doodle God<br>
--Cosmonautica <br>
--Toca Kitchen 2<br>
--Gravity Guy<br>
--Lifeline<br>
--Lifeline 2<br>
--Worms 3<br>
--Ski Safari 2<br>
--Russian Offline Translator<br>
--Spider<br>
--Calvino Noir<br>
--ZONA Project<br>
--Transport Tycoon<br>
--TicketNow<br>
--The Marble Age<br>
--The Tiny Bang<br>
--Avernum : Escape <br>
--A FireLit Room<br>
--My Water Balance<br>
--Angry Birds Seasons<br>
--Angry Birds<br>
--Tengami<br>
--Moorhuhn Deluxe<br>
--Bio Inc. Platinum<br>
--Cut The Rope : Time Travel<br>
--Take Off<br>
-<br /><br />
+<br>
+-FEZ
+-Portal Knights
+-VPNMasterPro
+-IDOS
+-DR2C
+-LOTF
+-Link Twin
+-Towaga
+-Survivalcraft 2
+-Rusty Lake: Roots
+-Rusty Lake Hotel
+-Botanicula
+-RCT Classic
+-M-BOX
+-Touch
+-Yuri
+-Binding Of Isaac
+-Go Rally
+-SW Heist
+-PartyHardGO
+-Pixomatic
+-STB
+-Vector 2 Premium
+-Sorcery! 4
+-Infinite Tanks
+-Batman
+-Whiteout
+-Crisis Line
+-Knock-Knock Game
+-OT Chronicles
+-VirtuaTennis
+-Human Resource Machine
+-Piloteer
+-Space Rangers: Quest
+-Go To Gold
+-Lesabel
+-Snowman
+-IntroMate
+-iMPC
+-ResidentEvil4
+-Fallout 4
+-Last Horizon
+-Abandoned
+-Punch Club
+-Draw Rider Plus
+-RESCUE
+-Stickman Battlefields
+-Blown Away
+-The Cave
+-AYA
+-C & W
+-iScanPRO
+-Runtastic
+-Castle
+-Grim
+-BrokenSword5
+-Agent A
+-H&C2
+-Multiplayer For Terreria
+-Origins 3
+-Origins Full
+-djay 2
+-Monument Valley
+-Osteya
+-Object 17
+-TNT Master
+-Leo's Fortune
+-Max Payne
+-Fix My Car
+-Forgotten M.
+-StarCommand
+-Tangent
+-Flockers
+-UTF
+-Sleep Attack TD
+-4x4 Off-Road Rally 4
+-Dark Meadow
+-I.F.I.T.
+-Braveland
+-LEGO Movie
+-ducktales
+-Loopy HD
+-Colin McRae Rally
+-FMH 2015
+-Halo: SS
+-Halo: SA
+-Lost Within
+-DeadEyes
+-Backflip Madness
+-Adventure
+-Fahrenheit
+-Implosion
+</br>
 <b>Apps :</b> 50+
 </p>
 </center>
