--- a/app/install/one.html
+++ b/app/install/one.html
@@ -71,100 +71,98 @@
 <div class="item-inner">
 <center>
 <p style="word-break: keep-all;color:#8e8e93;">
-<br>
--FEZ
--Portal Knights
--VPNMasterPro
--IDOS
--DR2C
--LOTF
--Link Twin
--Towaga
--Survivalcraft 2
--Rusty Lake: Roots
--Rusty Lake Hotel
--Botanicula
--RCT Classic
--M-BOX
--Touch
--Yuri
--Binding Of Isaac
--Go Rally
--SW Heist
--PartyHardGO
--Pixomatic
--STB
--Vector 2 Premium
--Sorcery! 4
--Infinite Tanks
--Batman
--Whiteout
--Crisis Line
--Knock-Knock Game
--OT Chronicles
--VirtuaTennis
--Human Resource Machine
--Piloteer
--Space Rangers: Quest
--Go To Gold
--Lesabel
--Snowman
--IntroMate
--iMPC
--ResidentEvil4
--Fallout 4
--Last Horizon
--Abandoned
--Punch Club
--Draw Rider Plus
--RESCUE
--Stickman Battlefields
--Blown Away
--The Cave
--AYA
--C & W
--iScanPRO
--Runtastic
--Castle
--Grim
--BrokenSword5
--Agent A
--H&C2
--Multiplayer For Terreria
--Origins 3
--Origins Full
--djay 2
--Monument Valley
--Osteya
--Object 17
--TNT Master
--Leo's Fortune
--Max Payne
--Fix My Car
--Forgotten M.
--StarCommand
--Tangent
--Flockers
--UTF
--Sleep Attack TD
--4x4 Off-Road Rally 4
--Dark Meadow
--I.F.I.T.
--Braveland
--LEGO Movie
--ducktales
--Loopy HD
--Colin McRae Rally
--FMH 2015
--Halo: SS
--Halo: SA
--Lost Within
--DeadEyes
--Backflip Madness
--Adventure
--Fahrenheit
--Implosion
-</br>
+-FEZ<br>
+-Portal Knights<br>
+-VPNMasterPro<br>
+-IDOS<br>
+-DR2C<br>
+-LOTF<br>
+-Link Twin<br>
+-Towaga<br>
+-Survivalcraft 2<br>
+-Rusty Lake: Roots<br>
+-Rusty Lake Hotel<br>
+-Botanicula<br>
+-RCT Classic<br>
+-M-BOX<br>
+-Touch<br>
+-Yuri<br>
+-Binding Of Isaac<br>
+-Go Rally<br>
+-SW Heist<br>
+-PartyHardGO<br>
+-Pixomatic<br>
+-STB<br>
+-Vector 2 Premium<br>
+-Sorcery! 4<br>
+-Infinite Tanks<br>
+-Batman<br>
+-Whiteout<br>
+-Crisis Line<br>
+-Knock-Knock Game<br>
+-OT Chronicles<br>
+-VirtuaTennis<br>
+-Human Resource Machine<br>
+-Piloteer<br>
+-Space Rangers: Quest<br>
+-Go To Gold<br>
+-Lesabel<br>
+-Snowman<br>
+-IntroMate<br>
+-iMPC<br>
+-ResidentEvil4<br>
+-Fallout 4<br>
+-Last Horizon<br>
+-Abandoned<br>
+-Punch Club<br>
+-Draw Rider Plus<br>
+-RESCUE<br>
+-Stickman Battlefields<br>
+-Blown Away<br>
+-The Cave<br>
+-AYA<br>
+-C & W<br>
+-iScanPRO<br>
+-Runtastic<br>
+-Castle<br>
+-Grim<br>
+-BrokenSword5<br>
+-Agent A<br>
+-H&C2<br>
+-Multiplayer For Terreria<br>
+-Origins 3<br>
+-Origins Full<br>
+-djay 2<br>
+-Monument Valley<br>
+-Osteya<br>
+-Object 17<br>
+-TNT Master<br>
+-Leo's Fortune<br>
+-Max Payne<br>
+-Fix My Car<br>
+-Forgotten M.<br>
+-StarCommand<br>
+-Tangent<br>
+-Flockers<br>
+-UTF<br>
+-Sleep Attack TD<br>
+-4x4 Off-Road Rally 4<br>
+-Dark Meadow<br>
+-I.F.I.T.<br>
+-Braveland<br>
+-LEGO Movie<br>
+-ducktales<br>
+-Loopy HD<br>
+-Colin McRae Rally<br>
+-FMH 2015<br>
+-Halo: SS<br>
+-Halo: SA<br>
+-Lost Within<br>
+-DeadEyes<br>
+-Backflip Madness<br>
+-Adventure<br>
+-Fahrenheit<br>
+-Implosion<br>
 <b>Apps :</b> 50+
 </p>
 </center>
