--- a/app/install/one.html
+++ b/app/install/one.html
@@ -71,98 +71,67 @@
 <div class="item-inner">
 <center>
 <p style="word-break: keep-all;color:#8e8e93;">
--FEZ<br>
--Portal Knights<br>
--VPNMasterPro<br>
--IDOS<br>
--DR2C<br>
--LOTF<br>
--Link Twin<br>
--Towaga<br>
--Survivalcraft 2<br>
--Rusty Lake: Roots<br>
--Rusty Lake Hotel<br>
--Botanicula<br>
--RCT Classic<br>
--M-BOX<br>
--Touch<br>
--Yuri<br>
--Binding Of Isaac<br>
--Go Rally<br>
--SW Heist<br>
--PartyHardGO<br>
--Pixomatic<br>
--STB<br>
--Vector 2 Premium<br>
--Sorcery! 4<br>
--Infinite Tanks<br>
--Batman<br>
--Whiteout<br>
--Crisis Line<br>
--Knock-Knock Game<br>
--OT Chronicles<br>
--VirtuaTennis<br>
--Human Resource Machine<br>
--Piloteer<br>
--Space Rangers: Quest<br>
--Go To Gold<br>
--Lesabel<br>
--Snowman<br>
--IntroMate<br>
--iMPC<br>
--ResidentEvil4<br>
--Fallout 4<br>
--Last Horizon<br>
--Abandoned<br>
--Punch Club<br>
--Draw Rider Plus<br>
--RESCUE<br>
--Stickman Battlefields<br>
--Blown Away<br>
--The Cave<br>
--AYA<br>
--C & W<br>
--iScanPRO<br>
--Runtastic<br>
--Castle<br>
--Grim<br>
--BrokenSword5<br>
--Agent A<br>
--H&C2<br>
--Multiplayer For Terreria<br>
--Origins 3<br>
--Origins Full<br>
--djay 2<br>
--Monument Valley<br>
--Osteya<br>
--Object 17<br>
--TNT Master<br>
--Leo's Fortune<br>
--Max Payne<br>
--Fix My Car<br>
--Forgotten M.<br>
--StarCommand<br>
--Tangent<br>
--Flockers<br>
--UTF<br>
--Sleep Attack TD<br>
--4x4 Off-Road Rally 4<br>
--Dark Meadow<br>
--I.F.I.T.<br>
--Braveland<br>
--LEGO Movie<br>
--ducktales<br>
--Loopy HD<br>
--Colin McRae Rally<br>
--FMH 2015<br>
--Halo: SS<br>
--Halo: SA<br>
--Lost Within<br>
--DeadEyes<br>
--Backflip Madness<br>
--Adventure<br>
--Fahrenheit<br>
--Implosion<br>
+-iMovie<br>
+-GarageBand<br>
+-Angry Birds<br>
+-RobberyBob2<br>
+-Dim Light<br>
+-MM Mobile<br>
+-Armored Kitten<br>
+-Hidden City<br>
+-Red Comrades<br>
+-Home Design<br>
+-GST 3<br>
+-Take off<br>
+-Pinnacle Pro<br>
+-Pinnacle Studio<br>
+-FinalFantasy9<br>
+-Moosic<br>
+-Roc<br>
+-ChaosRings<br>
+-RetricaPro<br>
+-RCT3<br>
+-Prune<br>
+-Til Mornings Light<br>
+-PowPingPong<br>
+-Dead Sync<br>
+-Evoland<br>
+-Blek<br>
+-VHS Cam<br>
+-Image Converter<br>
+-Pirate<br>
+-Xenowerk<br>
+-Red Comrades 2<br>
+-Scribblenauts Unlimited<br>
+-Syberia<br>
+-Godfire<br>
+-Ravensword2<br>
+-Truck 16<br>
+-Trick Shot<br>
+-Tiny Gaurdians<br>
+-Baldur's Gate<br>
+-Deathwatch<br>
+-Broken Age<br>
+-#ymbab<br>
+-LEGO LOTR<br>
+-LEGO HP<br>
+-LEGO Harry 2<br>
+-WWE 2k<br>
+-Door Kickers<br>
+-You Doodle Pro<br>
+-NHL 2k<br>
+-Bastion<br>
+-Hello, Stranger<br>
+-XCOM:EW<br>
+-Bazaart<br>
+-Sniper<br>
+-Lara Croft GO<br>
+-Transistor<br>
+-This War Of Mine<br>
+-Sanitarium<br>
+-Bard's Tale<br>
+-Dim Light<br>
+-Aralon 2<br>
 <b>Apps :</b> 50+
 </p>
 </center>
