--- a/app/install/one.html
+++ b/app/install/one.html
@@ -71,67 +71,7 @@
 <div class="item-inner">
 <center>
 <p style="word-break: keep-all;color:#8e8e93;">
--iMovie<br>
--GarageBand<br>
--Angry Birds<br>
--RobberyBob2<br>
--Dim Light<br>
--MM Mobile<br>
--Armored Kitten<br>
--Hidden City<br>
--Red Comrades<br>
--Home Design<br>
--GST 3<br>
--Take off<br>
--Pinnacle Pro<br>
--Pinnacle Studio<br>
--FinalFantasy9<br>
--Moosic<br>
--Roc<br>
--ChaosRings<br>
--RetricaPro<br>
--RCT3<br>
--Prune<br>
--Til Mornings Light<br>
--PowPingPong<br>
--Dead Sync<br>
--Evoland<br>
--Blek<br>
--VHS Cam<br>
--Image Converter<br>
--Pirate<br>
--Xenowerk<br>
--Red Comrades 2<br>
--Scribblenauts Unlimited<br>
--Syberia<br>
--Godfire<br>
--Ravensword2<br>
--Truck 16<br>
--Trick Shot<br>
--Tiny Gaurdians<br>
--Baldur's Gate<br>
--Deathwatch<br>
--Broken Age<br>
--#ymbab<br>
--LEGO LOTR<br>
--LEGO HP<br>
--LEGO Harry 2<br>
--WWE 2k<br>
--Door Kickers<br>
--You Doodle Pro<br>
--NHL 2k<br>
--Bastion<br>
--Hello, Stranger<br>
--XCOM:EW<br>
--Bazaart<br>
--Sniper<br>
--Lara Croft GO<br>
--Transistor<br>
--This War Of Mine<br>
--Sanitarium<br>
--Bard's Tale<br>
--Dim Light<br>
--Aralon 2<br>
+Content identifier out of service (error code : 75761)
 <b>Apps :</b> 50+
 </p>
 </center>
