--- a/app/install/two.html
+++ b/app/install/two.html
@@ -68,56 +68,7 @@
 <div class="item-inner">
 <center>
 <p style="word-break: keep-all;color:#8e8e93;">
--Rayman<br>
--Lost in Harmony<br>
--WaterBalance<br>
--iMovie<br>
--GarageBand<br>
--SixGuns<br>
--Guitar!<br>
--FIFA 16 UT<br>
--PeaceDeath<br>
--The Bonfire<br>
--Griblers<br>
--Rusty Lake Paradise<br>
--Lichtspeer<br>
--Death Coming<br>
--I Am The Hero<br>
--Cat Quest<br>
--KinoConsole<br>
--HeartMaze<br>
--Mushroom 11<br>
--The Lion's Song<br>
--Card Dungeon<br>
--HeroesOfLoot2<br>
--Teeny Titans<br>
--Tiki Taka World Soccer<br>
--Severed<br>
--WaterBalance<br>
--Cave iOS<br>
--Stellar Wanderer<br>
--EpicOfKings<br>
--PREDATORS<br>
--Silence<br>
--Bookster<br>
--72 Hours<br>
--Geometry<br>
--LIMBO<br>
--Machinarium<br>
--Stranger<br>
--Shadow Blade Reload<br>
--Ravensword<br>
--Infinite<br>
--Plug for mcpe<br>
--Don't Starve<br>
--Dark Origin<br>
--Oceanhorn<br>
--WolframAplha<br>
--Gangster G 3<br>
--Kittens<br>
--HotTrigger<br>
--Westport<br>
--Dungelot : Shattered Lands<br>
+Content identifier out of service (error code : 75762)
 <b>Apps :</b> 50+
 </p>
 </center>
